포트폴리오

--- a/pc/sass/layout/_layout.scss
+++ b/pc/sass/layout/_layout.scss
@@ -50,7 +50,7 @@ body.default { position:$re; overflow:hidden; }
 							}
 							&:before,&:after{content:''; position:$ab; top:0; left:0; height:4px; width:0; background: #000; transition:600ms ease all;}
 							&:after{left:inherit; top:inherit; right:0; bottom:0;}
-							.title{font-size:26px;
+							.title{font-size:26px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);
 								&:hover{font-size:28px;}
 							}
 							.sub_text{top:65%;}
@@ -61,8 +61,8 @@ body.default { position:$re; overflow:hidden; }
 					img{width:100%;}
 				}
 				.contents_info{width:96%; height:87%; margin:2%; opacity:0; position:$ab; top:0px; left:0px; z-index:10;
-					.inner_info{
-						.title{float:right; animation-duration: 0.5s; animation-name: slideleft; animation-iteration-count: infinite; animation-direction: alternate;
+					.inner_info{width:100%; height:100%; position:relative;
+						.title{animation-duration: 0.5s; animation-name: slideleft; animation-iteration-count: infinite; animation-direction: alternate;
 							@keyframes slideleft {
 								from {
 									padding-right:0px;
