--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -50,9 +50,10 @@ body.default { position:$re; overflow:hidden; }
 						&:before{content:''; position:$ab; top:0; left:0; height:5px; width:0; background: #000; transition:600ms ease all;}
 						&:after{left:inherit; top:inherit; right:0; bottom:0; content:''; position:$ab; top:0; left:0; height:5px; width:0; background: #000; transition:600ms ease all;}
 						.inner_info{width:100%; font-size:26px; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); text-align:center; letter-spacing:1px;
-							&:hover{font-size:28px;}
 							span{font-size:14px; padding-left:5px;}
-							.title{height:40px; line-height:40px;}
+							.title{height:40px; line-height:40px;
+								&:hover{font-size:28px;}
+							}
 							.info{text-align:center;}
 						}
 						.info{font-size:16px;}
